Feature/helm charts (#1)
* Restructured GuestList

* Long to UUID for users, removed unnecessary endpoints

* Changed JSON construction method

* Updated README

* Helm Charts implementation (test #1)

* Test #2

* Changed name and path

* Increased timeout

* Testing

* Changed path (again)

* Correct image setup

* Removed branch support from CI/CD